log
Tue 21 Mar 2023 06:32:57 PM UTC: 
 tests:  0|6
total_score: 0/70
691573f
Wed 22 Mar 2023 11:38:11 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:3: error: expected expression before ‘return’
   34 |   return listaEnlazadaDoble;
      |   ^~~~~~
list.c:32:9: error: variable ‘listaEnlazadaDoble’ set but not used [-Werror=unused-but-set-variable]
   32 |   List *listaEnlazadaDoble = (List *) malloc(sizeof(List));
      |         ^~~~~~~~~~~~~~~~~~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4051a06
Wed 22 Mar 2023 11:53:56 PM UTC: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
5feb404
Thu 23 Mar 2023 12:09:12 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:43:1: error: unknown type name ‘Pelicula’
   43 | Pelicula * firstList(List * list) {
      | ^~~~~~~~
list.c:43:12: error: conflicting types for ‘firstList’; have ‘int *(List *)’ {aka ‘int *(struct List *)’}
   43 | Pelicula * firstList(List * list) {
      |            ^~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:8:8: note: previous declaration of ‘firstList’ with type ‘void *(List *)’ {aka ‘void *(struct List *)’}
    8 | void * firstList(List * list);
      |        ^~~~~~~~~
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:3: error: unknown type name ‘Pelicula’
   44 |   Pelicula *dato = list->head;
      |   ^~~~~~~~
list.c:44:20: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   44 |   Pelicula *dato = list->head;
      |                    ^~~~
cc1: all warnings being treated as errors
Compilation failed
7026ed6
Thu 23 Mar 2023 12:11:07 AM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
add1d78
Thu 23 Mar 2023 12:14:09 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
1a6621b
Thu 23 Mar 2023 12:15:29 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d7a0a7b
Thu 23 Mar 2023 12:16:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8651344
Thu 23 Mar 2023 12:18:18 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d3995da
Thu 23 Mar 2023 12:21:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
eb35565
Thu 23 Mar 2023 12:22:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
35fba5c
Thu 23 Mar 2023 12:23:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
dd35284
Thu 23 Mar 2023 12:25:43 AM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:3: error: ‘listaEnlazada’ undeclared (first use in this function)
   36 |   listaEnlazada->head = NULL;
      |   ^~~~~~~~~~~~~
list.c:36:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:10: error: ‘listaEnlazadaCircularDoble’ undeclared (first use in this function)
   40 |   return listaEnlazadaCircularDoble;
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2a42b05
Thu 23 Mar 2023 12:26:09 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
c8bc18d
Thu 23 Mar 2023 12:26:53 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
aac740f
Thu 23 Mar 2023 12:28:15 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
82f3d5c
Thu 23 Mar 2023 12:28:40 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
336ea03
Thu 23 Mar 2023 12:31:56 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
af93676
Thu 23 Mar 2023 12:40:40 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:81:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   81 |     return NULL;
      |            ^~~~
list.c:79:6: note: declared here
   79 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e7b5e42
